cmake_minimum_required(VERSION 3.10)
project(GEP VERSION 0.1)
set(CMAKE_EXE_LINKER_FLAGS "-static")
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CMAKE_CXX_STANDARD 11)
configure_file(GEP.h.in GEP.h)
file(GLOB_RECURSE CPP_FILES ./ *.cpp)
add_executable(GEP.out ${CPP_FILES})
target_include_directories(GEP.out PUBLIC "${PROJECT_BINARY_DIR}")
set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)
target_link_libraries(GEP.out PUBLIC Threads::Threads)
